I lied about going to sleep - fixed contact links instead. Now just need to fix responsiveness and alignment and review copy tomorrow. Wow that sounds like a lot.

--- a/css/index.css
+++ b/css/index.css
@@ -18,6 +18,15 @@ p{margin-bottom:1em;}
   font-size: 0.75em;
 }
 
+i {
+  padding-right: 1em;
+  color: steelblue;
+}
+
+i:hover {
+  color: black;
+}
+
 .project-images {
   height: auto;
   width:100%;
